responsive dashboard finished

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -57,6 +57,9 @@
       "@ui/*": [
         "./src/ui/*"
       ],
+      "@views/*": [
+        "./src/ui/views/*"
+      ],
     }
   },
   "include": [
