--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,5 @@ djangorestframework==3.14.0
 django-storages==1.13.1
 django-ckeditor==6.3.2
 psycopg2==2.9.5
+pillow==10.4.0
+django-ckeditor==6.3.2
