--- a/backend/core/.env
+++ b/backend/core/.env
@@ -9,7 +9,7 @@ CSRF_TRUSTED_ORIGINS_DEPLOY=""
 ENGINE='django.db.backends.postgresql_psycopg2'
 NAME='Inventory'
 USER='postgres'
-PASSWORD='fernando123-2000'
+PASSWORD=''
 HOST='localhost'
 PORT='5432'
 
